CHG: pushing call to Enzyme further in the code to reduce scope

--- a/Project.toml
+++ b/Project.toml
@@ -7,6 +7,7 @@ version = "0.1.0"
 ColorSchemes = "35d6a980-a343-548e-a6ea-1d62b119f2f4"
 Cthulhu = "f68482b8-f384-11e8-15f7-abe071a5a75f"
 Enzyme = "7da242da-08ed-463a-9acd-ee780be4f1d9"
+Enzyme_jll = "7cc45869-7501-5eee-bdea-0790c847d4ef"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 JET = "c3a54625-cd67-489e-a8e7-0a5a0ff4e31b"
@@ -14,8 +15,8 @@ LinearSolve = "7ed4a6bd-45f5-4d41-b270-4a48e9bafcae"
 MAT = "23992714-dd62-5051-b70f-ba57cb901cac"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
-Triangulate = "f7e6ffb2-c36d-4f8f-a77e-16e897189344"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+Triangulate = "f7e6ffb2-c36d-4f8f-a77e-16e897189344"
 
 [extras]
 Enzyme = "7da242da-08ed-463a-9acd-ee780be4f1d9"
