--- a/Project.toml
+++ b/Project.toml
@@ -8,7 +8,8 @@ ColorSchemes = "35d6a980-a343-548e-a6ea-1d62b119f2f4"
 Cthulhu = "f68482b8-f384-11e8-15f7-abe071a5a75f"
 Enzyme = "7da242da-08ed-463a-9acd-ee780be4f1d9"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
-#GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
+GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
+IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 MAT = "23992714-dd62-5051-b70f-ba57cb901cac"
 Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
