--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -46,6 +46,7 @@ jobs:
       - uses: julia-actions/julia-buildpkg@v1
       - if: matrix.os == ubuntu-latest
         run: sudo apt-get update && sudo apt-get install -y xorg-dev mesa-utils xvfb libgl1 freeglut3-dev libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev libxext-dev xsettingsd x11-xserver-utils
+      - if: matrix.os == ubuntu-latest
         uses: julia-actions/julia-runtest@v1
         with:
           prefix: xvfb-run -s '-screen 0 1024x768x24'
