--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -45,13 +45,13 @@ jobs:
             ${{ runner.os }}-
       - uses: julia-actions/cache@v1
       - uses: julia-actions/julia-buildpkg@v1
-      - if: matrix.os == "ubuntu-20.04"
+      - if: matrix.os == 'ubuntu-20.04'
         run: sudo apt-get update && sudo apt-get install -y xorg-dev mesa-utils xvfb libgl1 freeglut3-dev libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev libxext-dev xsettingsd x11-xserver-utils
-      - if: matrix.os == "ubuntu-20.04"
+      - if: matrix.os == 'ubuntu-20.04'
         uses: julia-actions/julia-runtest@v1
         with:
           prefix: xvfb-run -s '-screen 0 1024x768x24'
-      - if: matrix.os == "macOS-latest"
+      - if: matrix.os == 'macOS-latest'
         uses: julia-actions/julia-runtest@v1
         with:
           prefix: Xvfb -s '-screen 0 1024x768x24'
