change name to DJUICE

--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "dJUICE"
+name = "DJUICE"
 uuid = "1cb5fe60-6b70-416b-9050-039c23a62a10"
 authors = ["Mathieu Morlighem <Mathieu.Morlighem@dartmouth.edu>"]
 version = "0.1.0"
