--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   test:
-    name: dJUICE on Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }} - ${{ github.event_name }}
+    name: DJUICE on Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }} - ${{ github.event_name }}
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -75,8 +75,8 @@ jobs:
             #      - run: |
             #          julia --project=docs -e '
             #            using Documenter: doctest
-            #            using dJUICE
-            #            doctest(dJUICE)' 
+            #            using DJUICE
+            #            doctest(DJUICE)' 
             #      - run: julia --project=docs docs/make.jl
             #        env:
             #          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
