update SparseArrays version

--- a/Project.toml
+++ b/Project.toml
@@ -24,7 +24,7 @@ GLMakie = "0.9.11"
 MAT = "0.10.7"
 Optimization = "3.25.1"
 OptimizationOptimJL = "0.3.1"
-SparseArrays = "1.10.0"
+SparseArrays = "1.8.0"
 StatsBase = "0.34.3"
 Triangulate = "2.3.2"
 julia = "1.8"
@@ -34,4 +34,4 @@ SafeTestsets = "1bc83da4-3b8d-516f-aca4-4fe02f6d838f"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Enzyme", "Test"]
+test = ["Test"]
