--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -20,9 +20,10 @@ jobs:
       matrix:
         version:
           - '1.10'   # the minimum version 
+          - '1.11'
         os:
           - ubuntu-20.04
-          # - macOS-latest
+          - macOS-latest
         arch:
           - x64
     steps:
