upgrade packages compat

--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ Enzyme = "7da242da-08ed-463a-9acd-ee780be4f1d9"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 MAT = "23992714-dd62-5051-b70f-ba57cb901cac"
+MadNLP = "2621e9c9-9eb4-46b1-8089-e8c72242dfb6"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
 OptimizationOptimJL = "36348300-93cb-4f02-beb5-3c3902f8871e"
@@ -21,9 +22,10 @@ Triangulate = "f7e6ffb2-c36d-4f8f-a77e-16e897189344"
 [compat]
 ColorSchemes = "3.25"
 Enzyme = "0.13"
-Flux = "0.14"
+Flux = "0.16"
 MAT = "0.10"
-Makie = "0.21"
+MadNLP = "0.8"
+Makie = "0.22"
 SparseArrays = "1"
 StatsBase = "0.34"
 Triangulate = "2.3"
