--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -22,17 +22,17 @@ jobs:
           - '1.10'   # the minimum version 
           - '1.11'
         os:
-          - ubuntu-latest
+          - ubuntu-24.04
           # - macOS-latest
         arch:
           - x64
     steps:
-      - uses: actions/checkout@v2
-      - uses: julia-actions/setup-julia@v1
+      - uses: actions/checkout@v4
+      - uses: julia-actions/setup-julia@v2
         with:
           version: ${{ matrix.version }}
           arch: ${{ matrix.arch }}
-      - uses: actions/cache@v1
+      - uses: actions/cache@v2
         env:
           cache-name: cache-artifacts
         with:
@@ -42,11 +42,11 @@ jobs:
             ${{ runner.os }}-test-${{ env.cache-name }}-
             ${{ runner.os }}-test-
             ${{ runner.os }}-
-      - uses: julia-actions/cache@v1
+      - uses: julia-actions/cache@v2
       - uses: julia-actions/julia-buildpkg@v1
-      - if: matrix.os == 'ubuntu-20.04'
+      - if: matrix.os == 'ubuntu-24.04'
         run: sudo apt-get update && sudo apt-get install -y xorg-dev mesa-utils xvfb libgl1 freeglut3-dev libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev libxext-dev xsettingsd x11-xserver-utils
-      - if: matrix.os == 'ubuntu-20.04'
+      - if: matrix.os == 'ubuntu-24.04'
         uses: julia-actions/julia-runtest@v1
         with:
           prefix: xvfb-run -s '-screen 0 1024x768x24'
