update sensitivity example with finer mesh;

--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,7 @@ ColorSchemes = "35d6a980-a343-548e-a6ea-1d62b119f2f4"
 Enzyme = "7da242da-08ed-463a-9acd-ee780be4f1d9"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
+JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 JSOSolvers = "10dff2fc-5484-5881-a0e0-c90441020f8a"
 MAT = "23992714-dd62-5051-b70f-ba57cb901cac"
 MadNLP = "2621e9c9-9eb4-46b1-8089-e8c72242dfb6"
@@ -24,6 +25,7 @@ Triangulate = "f7e6ffb2-c36d-4f8f-a77e-16e897189344"
 ColorSchemes = "3.25"
 Enzyme = "0.13"
 Flux = "0.16"
+JLD2 = "0.6.2"
 JSOSolvers = "0.14.1"
 MAT = "0.10"
 MadNLP = "0.8"
