Rewrite DNNFriction using Lux

--- a/Project.toml
+++ b/Project.toml
@@ -7,16 +7,20 @@ version = "0.1.1"
 CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 ColorSchemes = "35d6a980-a343-548e-a6ea-1d62b119f2f4"
 Enzyme = "7da242da-08ed-463a-9acd-ee780be4f1d9"
-Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 JSOSolvers = "10dff2fc-5484-5881-a0e0-c90441020f8a"
+Lux = "b2108857-7c20-44ae-9111-449ecde12c47"
 MAT = "23992714-dd62-5051-b70f-ba57cb901cac"
+MLUtils = "f1d291b0-491e-4a28-83b9-f70985020b54"
 MadNLP = "2621e9c9-9eb4-46b1-8089-e8c72242dfb6"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 ManualNLPModels = "30dfa513-9b2f-4fb3-9796-781eabac1617"
+OnlineStats = "a15396b6-48d5-5d58-9928-6d29437db91e"
+Optimisers = "3bd65402-5787-11e9-1adc-39752487f4e2"
 Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
+Reactant = "3c362404-f566-11ee-1572-e11a4b42c853"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 Triangulate = "f7e6ffb2-c36d-4f8f-a77e-16e897189344"
@@ -24,13 +28,17 @@ Triangulate = "f7e6ffb2-c36d-4f8f-a77e-16e897189344"
 [compat]
 ColorSchemes = "3.25"
 Enzyme = "0.13"
-Flux = "0.16"
-JLD2 = "0.6.2"
+JLD2 = "0.6"
 JSOSolvers = "0.14.1"
+Lux = "1.21"
 MAT = "0.10"
+MLUtils = "0.4.8"
 MadNLP = "0.8"
 Makie = "0.24"
 ManualNLPModels = "0.2.0"
+OnlineStats = "1.7.2"
+Optimisers = "0.4.6"
+Reactant = "0.2.170"
 SparseArrays = "1"
 StatsBase = "0.34"
 Triangulate = "3.0"
